# geosampler

./: README.rst  pyproject.toml  requirements.txt
examples/: hair_care_bedford_stuyvesant_usa.ipynb  hair_care_bedford_stuyvesant_usa_pop.csv  hair_cut_in_sicily.ipynb  map_hair_care_bedford_stuyvesant_usa.html  map_hair_cut_in_sicily.html  mosque_mogadishu_somalia.html  mosque_mogadishu_somalia.ipynb  mosque_mogadishu_somalia_pop.csv  mosque_mogadishu_somalia_rs.csv  night_club_bordeaux_france.html  night_club_bordeaux_france.ipynb  night_club_bordeaux_france_pop.csv  night_club_bordeaux_france_ss.csv  population_hair_cut_in_sicily.csv  random_sample_hair_cut_in_sicily.csv
geosampler/: sampler.py
sample/: map.py  sampler.py
tests/: test_sample.py
