[tool.poetry]
name = "geosampler"
version = "0.1.3"
description = "A simple Python library to sample places for research"
authors = ["Gloria Macia <gloria.macia@roche.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <4"
pandas = "^1.5.0"
requests = "^2.28.1"
tqdm = "^4.64.1"
folium = "^0.12.1"
docutils = "^0.19"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
isort = ">=3.7,<4.0"
ipykernel = "^6.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
